# augur

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Augur-frontend-from-Claude-Design/: Augur Home v2.html  Augur Home.html  Augur Options.html  app.jsx  augur-shared.jsx  home-v2.jsx  option-astrolabe.jsx  option-garden.jsx  option-herbarium.jsx  options-app.jsx
config/: sources.yaml
docker/postgres/: Dockerfile  init.sql
docs/: augur-architecture.md  augur-calibration.md  augur-frontend-implementation.md  augur-graph-schema.md  augur-presentation.md  augur-roadmap.md  augur-signal-pipeline.md  augur-sources.md  augur-vision.md
scripts/: backup.sh  restore.sh
src/augur/: __init__.py  config.py  logging.py  main.py  scheduler.py
src/augur/anchoring/: __init__.py  batch_former.py  orchestrator.py  prompt.py
src/augur/api/: __init__.py  conversation.py  events.py  geo.py  health.py  home.py  market.py  reasoning.py  scenarios.py  status.py  topics.py
src/augur/calibration/: __init__.py  leakage.py  live_tracker.py  models.py  orchestrator.py  replay.py  scorer.py  (+2 more)
static/: index.html
static/css/: augur.css
static/js/: augur-app.jsx  conversation.js  home.js  reasoning.js  scenarios.js  topic.js
tests/: conftest.py  test_anchoring.py  test_applier.py  test_calibration.py  test_db.py  test_disconfirmation.py  test_extraction.py  test_ingestion.py  test_lenses_phase4.py  test_llm_client.py  test_market_data.py  test_phase10.py  test_phase11.py  test_phase12.py  test_phase7.py  test_phase8.py  test_phase9.py
(+78 files in other folders)
