[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "augur"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "openai>=1.52.0",
    "langfuse>=3.2.0",
    "typer>=0.12.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
    "feedparser>=6.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.6.0",
]

[project.scripts]
augur = "augur.cli.operator:app"

[tool.hatch.build.targets.wheel]
packages = ["src/augur"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]
